# Overfitters

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  blog.md  openenv.yaml  pyproject.toml  pytest.ini
docs/: blog_post.md  grpo_dry_run.md
house_md_env/: .dockerignore  Dockerfile  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
house_md_env/clinical_rl/: __init__.py  oracle.py  parser_schema.py  patient_io.py  playground_shared.py  prompt.py  rewards.py  tts.py
house_md_env/clinical_rl/env/: __init__.py  cards.py  catalogs.py  env.py  state.py
house_md_env/data/: diseases.yaml  eval_set.jsonl  exams.yaml  questions.yaml  tests.yaml
house_md_env/data/cards/: anxiety_attack.yaml  appendicitis.yaml  bacterial_meningitis.yaml  costochondritis.yaml  dka.yaml  ectopic_pregnancy.yaml  migraine.yaml  ovarian_torsion.yaml  pneumonia.yaml  pulmonary_embolism.yaml  sepsis_uti.yaml  stemi.yaml  subarachnoid_hemorrhage.yaml  viral_gastroenteritis.yaml  viral_uri.yaml
house_md_env/results/: eval_base.json  eval_grpo.json  eval_results.json  eval_sft.json
house_md_env/server/: __init__.py  app.py  house_md_environment.py  playground.py
house_md_env/server/static/: app.js  index.html  styles.css
notebooks/: 00_run_all.ipynb  01_explore_env.ipynb  02_sft.ipynb  03_grpo.ipynb  04_eval_compare.ipynb  run_all.py  run_all.sh
results/: gemini_flash.json
results/training_logs/: grpo_10step_baseline.jsonl  grpo_50step_compact.jsonl  grpo_50step_main.jsonl  runs.json
scripts/: _dump_training_logs.py  _eval_openenv.py  build_training_plots.py  eval.sh  eval_hf.py  submit_grpo_optimized_job.py  submit_sft_job.py  train_grpo_optimized.py  train_sft.py
tests/: conftest.py  test_dynamic_patient.py  test_oracle.py  test_prompt.py  test_rewards.py  test_server_tts.py
