[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-house-md-env"
version = "0.1.0"
description = "House M.D. — POMDP clinical-reasoning RL environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.24.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
ui = [
    # Optional Gradio playground at /web (set ENABLE_WEB_INTERFACE=true)
    "gradio>=4.0.0",
]

[project.scripts]
server = "house_md_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = [
    "house_md_env",
    "house_md_env.server",
    "house_md_env.clinical_rl",
    "house_md_env.clinical_rl.env",
]

[tool.setuptools.package-dir]
"house_md_env" = "."
"house_md_env.server" = "server"
"house_md_env.clinical_rl" = "clinical_rl"
"house_md_env.clinical_rl.env" = "clinical_rl/env"

[tool.setuptools.package-data]
"house_md_env" = ["data/*.yaml", "data/cards/*.yaml", "data/*.jsonl"]
"house_md_env.server" = ["static/*.html", "static/*.js", "static/*.css"]
